--- a/donatePage.html
+++ b/donatePage.html
@@ -3,8 +3,6 @@
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="img/favicon.png">
-
   </head>
 <body>
     <nav  id="hnavbar" class="navbar navbar-expand-lg bg-body-tertiary">
@@ -44,10 +42,10 @@
 
         <form id="update-form">
             <label for="name">Name:</label>
-            <input type="text" class="form-control" placeholder="Enter display name">
+            <input type="text" id="name" class="form-control" placeholder="Enter display name">
             <br>
             <label for="number">Amount to Donate:</label>
-            <input type="number" class="form-control" required placeholder="Enter in dollars ($)">
+            <input type="number" id="number" class="form-control" required placeholder="Enter in dollars ($)">
             <br>
 
             <div class="payment-container">
@@ -60,14 +58,14 @@
             </div>
 
             <label for="card-number">Credit Card Number:</label>
-            <input type="text" class="form-control" maxlength="16" required placeholder="Enter 16-digit card number">
+            <input type="text" class="form-control" id="card-number" maxlength="16" required placeholder="Enter 16-digit card number">
             <br>
 
             <button type="submit" class="btn btn-success" style="margin-top: 3vh; height: 4vh; width: 7vh; font-size: 1.6vh; width: 4vw; height: 4vh;">Donate</button>
         </form>
       </div>
     
-    <script src="leaderBoard.js"></script> 
+    <script src="leaderBoard.js" type="module"></script> 
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
