--- a/donatePage.html
+++ b/donatePage.html
@@ -5,6 +5,12 @@
     <link rel="stylesheet" href="style.css">
   </head>
 <body>
+
+    <script>
+        function setPaymentMethod(method) {
+            document.getElementById('selected-payment').innerText = `Selected payment method: ${method}`;
+        }
+    </script>
     <nav  id="hnavbar" class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">EqualBites</a>
